Paginate the high-score table.

--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,4 @@ ErrorDocument 404 /404.html
 
 RewriteEngine on
 RewriteRule ^([^/.]+)/?$ index.php?page=$1 [L]
+RewriteRule ^highscores/([^/.]+)/?$ index.php?page=highscores&p=$1 [L]
